# camera_lidar_calibration

./: README.md
calibration/: CMakeLists.txt  package.xml
calibration/debug_data/: C_T_L_left.txt  C_T_L_right.txt  octave-workspace  read_result.m  removeOutliers.m  visualize_line_data.m  visualize_plane_data.m
calibration/include/: calibration_error_term.h
calibration/launch/: calibration_node.launch  calibration_simulation.launch  calibration_test_initialization.launch  calibration_test_initialization_left.launch  calibration_test_initialization_left_VLP.launch  calibration_test_initialization_left_os.launch  calibration_test_initialization_right.launch  calibration_test_initialization_right_VLP.launch  calibration_test_initialization_right_os.launch  left_calibration_process.launch  left_feature_generation_chkrbrd.launch  left_featuregen_process.launch  left_featuregen_processII.launch  left_featuregen_process_VLP.launch  left_featuregen_process_os.launch  left_right_calibration.launch  left_right_calibration_VLP.launch  left_right_calibration_os.launch  right_calibration_process.launch  (+10 more)
checkerboard_plane_detection/: CMakeLists.txt  package.xml
checkerboard_plane_detection/launch/: checkerboard_VLP_edge_plane_detection_node.launch  checkerboard_VLP_plane_detection_node.launch  checkerboard_VLP_plane_detection_node_target2.launch  checkerboard_edge_plane_detection_node.launch  checkerboard_ouster_plane_detection_node.launch  checkerboard_plane_detection_node.launch  checkerboard_plane_detection_node_VLP.launch  checkerboard_plane_detection_node_os.launch
checkerboard_plane_detection/src/: checkerboard_plane_detection_node.cpp
chkrbrd_plane_motion_detection/: CMakeLists.txt  package.xml
config/: nerian_rect_faccal.yaml  target_1.yaml  target_2.yaml
data_collection/: CMakeLists.txt  package.xml
image_line_detection/: CMakeLists.txt  package.xml
lidar_edge_detector/: CMakeLists.txt  README.md  package.xml
lidar_edge_detector/include/: Velodyne.h
lidar_edge_detector/launch/: lidar_edge_detector_VLP32_node.launch  lidar_edge_detector_node.launch  lidar_edge_detector_ouster_node.launch
lidar_edge_detector/src/: Velodyne.cpp  lidar_edge_detector_node.cpp
lidar_line_detect/: CMakeLists.txt  package.xml
lidar_line_detect/launch/: lidar_line_detect_node.launch
lidar_line_detect/src/: lidar_line_detect_node.cpp
lidar_line_detection/: CMakeLists.txt  package.xml
lidar_line_detection/launch/: lidar_line_detection_node.launch
lidar_line_detection/src/: lidar_line_detection_node.cpp
matlab/: draw_lidar_camera_plane.m  initializations.csv  initializations_left.csv  initializations_right.csv  points3dplane.csv  points3dplane_edges.csv  results.csv  results_left.csv  results_right.csv  sensitivity2initialization.m
motion_detector/: CMakeLists.txt  package.xml
motion_detector/data/left_VLP/lidar_data/: pointcloud0.pcd  pointcloud1.pcd  pointcloud2.pcd  pointcloud3.pcd  pointcloud4.pcd  pointcloud7.pcd  pointcloud8.pcd  pointcloud9.pcd
motion_detector/data/left_os/lidar_data/: pointcloud0.pcd  pointcloud1.pcd  pointcloud10.pcd  pointcloud11.pcd  pointcloud12.pcd  pointcloud13.pcd  pointcloud14.pcd  pointcloud16.pcd  pointcloud17.pcd  pointcloud19.pcd  pointcloud2.pcd  pointcloud20.pcd  pointcloud22.pcd  pointcloud23.pcd  pointcloud24.pcd  pointcloud25.pcd  pointcloud26.pcd  pointcloud27.pcd  pointcloud3.pcd  pointcloud4.pcd  pointcloud5.pcd  pointcloud6.pcd  pointcloud7.pcd  pointcloud8.pcd  pointcloud9.pcd
motion_detector/data/right_VLP/lidar_data/: pointcloud4.pcd  pointcloud5.pcd  pointcloud6.pcd  pointcloud8.pcd  pointcloud9.pcd
motion_detector/data/right_os/lidar_data/: pointcloud0.pcd  pointcloud1.pcd  pointcloud10.pcd  pointcloud11.pcd  pointcloud12.pcd  pointcloud13.pcd  pointcloud14.pcd  pointcloud15.pcd  pointcloud16.pcd  pointcloud17.pcd  pointcloud19.pcd  pointcloud2.pcd  pointcloud20.pcd  pointcloud3.pcd  pointcloud4.pcd  pointcloud5.pcd  pointcloud6.pcd  pointcloud7.pcd  pointcloud8.pcd  pointcloud9.pcd
motion_detector/launch/: motion_detector_VLP.launch  motion_detector_left.launch  motion_detector_left_VLP.launch  motion_detector_left_os.launch  motion_detector_os.launch  motion_detector_right_VLP.launch  motion_detector_right_os.launch
motion_detector/src/: motion_detector_node.cpp
projection/: CMakeLists.txt  package.xml
random_frame_generator/: CMakeLists.txt
synchronizer/: CMakeLists.txt  package.xml
target_detector/: CMakeLists.txt  package.xml
target_line_detector/: CMakeLists.txt
(+1082 files in other folders)
